--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
